[tool.poetry]
version = "2.0"

name = "logux_django"
homepage = "https://github.com/logux/django/"
description = "Django Logux integration engine https://logux.io/"

license = "MIT"

packages = [
    { include = "logux/**/*.py" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
]

authors = [
    "Vadim Iskuchekov <egregors@pm.me>",
]

readme = "README.md"

[tool.poetry.dependencies]
python = "<4,^3.7"
Django = "<4,>=2.2"
requests = "<3,>=2.22.0"
semantic-version = "^2.8.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3.1"
flake8 = "^3.8.4"
mccabe = "^0.6.1"
django-stubs = "^1.7.0"
pylint = "^2.6.0"
Sphinx = "^3.4.0"
twine = "^3.2.0"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "dephell>=0.8.3"
]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
